*) Redirect error stream.