@@ -52,17 +52,17 @@ public class CmdUtil {
 			String[] use = { "cmd", "/c" };
 			List<String> cmdList = new ArrayList<String>(Arrays.asList(use));
 			cmdList.addAll(Arrays.asList(cmd));
-			Process p = Runtime.getRuntime().exec(cmdList.toArray(new String[0]));
+			
+			// ﻿Process p = Runtime.getRuntime().exec(cmdList.toArray(new String[0]));
+			ProcessBuilder builder = new ProcessBuilder(cmdList.toArray(new String[0]));
+			builder.redirectErrorStream(true);
+			Process p = builder.start();
+			
 			BufferedReader bri = new BufferedReader(new InputStreamReader(p.getInputStream()));
-			BufferedReader bre = new BufferedReader(new InputStreamReader(p.getErrorStream()));
 			while ((line = bri.readLine()) != null) {
 				sbOut.append(line + "\n");
 			}
 			bri.close();
-			while ((line = bre.readLine()) != null) {
-				sbErr.append(line + "\n");
-			}
-			bre.close();
 			Integer exitValue = p.waitFor();
 			// System.out.println("Exit value: " + exitValue);
 			if (0 == exitValue || 1 == exitValue) {
